--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-color: #E5E5E5;
+    background-color: #23252C;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.photo{
+    display: block;
+    margin: auto;
+}
+
+.info--container{
+    color: white;
+    text-align: center;
+    margin-block: 23px;
+}
+
+#profession{
+    color: #F3BF99;
+}
+
+#website{
+    color: #F5F5F5;
+    text-decoration: none;
+}
+
+.email--container{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    width: 295px;
+    margin: auto;
+    border-radius: 3px;
+    padding: 3px;
+    cursor: pointer;
+}
+
+#Email--img{
+    margin: 8.5px 7px;
+    width: 20px;
+    height: 15px;
+}
+
+#Email--text{
+    color: #374151;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 20px;
+    padding: 0 7px;
+}
+
+.about--container{
+    color: #DCDCDC;
+    width: 42ch;
+    margin: auto;
+    margin-block: 50px;
+    padding: 0px 35px;
+}
+.about--heading{
+    color: #F5F5F5;
+}
+.about--text{
+    font-size: 0.85rem;
+}
+
+footer{
+    display: flex;
+    margin: auto;
+    width: 320px;
+    padding: 14px 7px;
+    justify-content: center;
+    border-radius: 5px;
+    background-color: #161619;
+}
+
+footer > img{
+    padding: 0 12px;
+    cursor: pointer;
 }
